improve: finaliza doc swagger rota /user
